[gd_scene load_steps=2 format=3 uid="uid://bdqkmt0ewb3h"]

[ext_resource type="Script" path="res://Tests/colored_dice_shop_test.gd" id="1_1a2b3c"]

[node name="ColoredDiceShopTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1a2b3c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Colored Dice Shop System Test"
horizontal_alignment = 1

[node name="RunTestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run Comprehensive Test"

[node name="TestResults" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Click 'Run Comprehensive Test' to test the colored dice shop system..."
fit_content = true